# fast_weather

./: .editorconfig  .env.template  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
fast_weather/: __main__.py  app.py  client.py  config.py  schemas.py  server.py  views.py
tests/: conftest.py  test_client.py  test_views.py
