[tool.poetry]
name = "fast-weather"
version = "0.1.0"
description = ""
authors = ["Daria Veselkova <daria.veselkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
