[tool.poetry]
name = "fast-weather"
version = "0.1.0"
description = ""
authors = ["Daria Veselkova <daria.veselkova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
pytest-httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
wemake-python-styleguide = "^0.18.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
faker = "^20.0.3"
pytest-cov = "^4.1.0"
pytest-testdox = "^3.1.0"
pytest-mock = "^3.12.0"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
  --strict-markers
  --tb=short
  --show-capture=log
  --cov-report=term-missing:skip-covered
  --cov-report=xml:coverage.xml
  --cov-branch
  --cov=fast_weather
  --testdox
  --no-header
  -x
  """
testpaths = [
    "tests",
]
norecursedirs = [".git", "__pycache__"]
testdox_format = "plaintext"


[tool.mypy]
plugins = "pydantic.mypy"
warn_unreachable = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false


[tool.flake8]
exclude = [
    ".venv",
    ".mypy_cache",
    ".git"
]
max-line-length = 99

ignore = [
    "B008",  # Do not perform function calls in argument defaults
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "S104",  # Possible binding to all interfaces
    "WPS110",  # Found wrong variable name
    "WPS306",  # Found class without a base class
    "WPS404",  # Found complex default value
]
per-file-ignores = [
    "tests/*: S101, WPS116, WPS118, WPS432, WPS442, WPS430, WPS226"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
